# snipx

./: AGENTS.md  IMPLEMENTATION_PLAN_ENHANCEMENTS.md  IMPLEMENTATION_PLAN_WEBCOMPATIBILITY.md  IMPLEMENTATION_PLAN_WEBSITE.md  index.html  package-lock.json  package.json  vite.config.ts
.opencode/: opencode.json
public/: index.html
src/: App.css  App.tsx  backend.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: lib.rs  listener.rs  main.rs  settings.rs  storage.rs  variables.rs
src/components/: SettingsPage.tsx  Sidebar.tsx  SnippetList.tsx  SnippetModal.tsx
src/components/ui/: Badge.tsx  Button.tsx  IconButton.tsx  Input.tsx  Select.tsx  Skeleton.tsx  TextArea.tsx  Toast.tsx  Toggle.tsx
