[package]
name = "snipx"
version = "0.1.0"
description = "System-wide snippet expander for macOS"
authors = ["Wilmond"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snipx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"
anyhow = "1"
core-graphics = "0.25"
core-foundation = "0.10"
foreign-types = "0.5"
parking_lot = "0.12"

[profile.dev.package."*"]
opt-level = 3

